the_project/manifests/overlays/staging/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
spec:
  template:
    spec:
      containers:
        - name: broadcaster
