the_project/manifests/overlays/staging/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: project-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      hostname: staging.localhost
      allowedRoutes:
        namespaces:
          from: Same
